기본틀 다지기 3-2 (3 개선)

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,7 +4,7 @@ theme = '2023dark' # 테마
 baseURL = 'http://example.org/' # 기본 URL
 
 # 고급 설정
-disableKinds = ['RSS'] # RSS 비활성화
+disableKinds = ['RSS', 'taxonomy'] # RSS 비활성화
 languageCode = 'ko-KR' # 사이트 언어 설정 (자동번역 도움됨)
 defaultContentLanguage = 'ko' # 다국어 처리 기본값 언어
 timeZone = 'Asia/Seoul' # 시간대 설정
