--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,6 +5,7 @@ baseURL = 'http://example.org/' # 기본 URL
 
 # 고급 설정
 disableKinds = ['RSS', 'taxonomy'] # RSS 비활성화
+ignoreErrors = ["error-disable-taxonomy"] # taxonomy 비활성화 오류 예외
 languageCode = 'ko-KR' # 사이트 언어 설정 (자동번역 도움됨)
 defaultContentLanguage = 'ko' # 다국어 처리 기본값 언어
 timeZone = 'Asia/Seoul' # 시간대 설정
@@ -16,3 +17,6 @@ enableInlineShortcodes = true # 인라인 단축코드 사용 (기본값 false, 
 [params]
 brandName = "지진관측 채널 Jpn Kor Earthquake"
 discordInviteURL = "https://discord.gg/RDrkKNnYC3"
+
+[markup.goldmark.renderer]
+unsafe = true
