--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,6 +4,7 @@ theme = '2023dark' # 테마
 baseURL = 'http://example.org/' # 기본 URL
 
 # 고급 설정
+paginate = 10
 disableKinds = ['RSS', 'taxonomy'] # RSS 비활성화
 ignoreErrors = ["error-disable-taxonomy"] # taxonomy 비활성화 오류 예외
 languageCode = 'ko-KR' # 사이트 언어 설정 (자동번역 도움됨)
@@ -21,5 +22,32 @@ lastmod = [':fileModTime', ':default']
 brandName = "지진관측 채널 Jpn Kor Earthquake"
 discordInviteURL = "https://discord.gg/RDrkKNnYC3"
 
+[markup]
+defaultMarkdownHandler = 'goldmark'
+
+[markup.goldmark.extensions]
+definitionList = true # 단어 정의
+footnote = true # 각주
+linkify = true # 자동 링크 감지
+linkifyProtocol = 'https'
+strikethrough = true # 취소줄 파싱
+table = true # 테이블 구현
+taskList = true # 체크박스 목록 구현
+typographer = true # 글자로 특수기호 대체
+
 [markup.goldmark.renderer]
-unsafe = true
+unsafe = true # HTML 코드 삽입 허용
+
+[markup.goldmark.parser]
+autoHeadingID = true # 제목 앵커 구현
+autoHeadingIDType = 'github' # 앵커 링크 스타일
+# wrapStandAloneImageWithinParagraph = true
+
+[markup.goldmark.parser.attribute] # 마크다운에서 class 제어 가능
+block = true
+title = true
+
+[markup.tableOfContents]
+startLevel = 2
+endLevel = 5
+ordered = true
