서버 규칙 초안 업데이트 (회의 후), 최종 심사 필요

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -21,6 +21,7 @@ lastmod = [':fileModTime', ':default']
 [params]
 brandName = "지진관측 채널 Jpn Kor Earthquake"
 discordInviteURL = "https://discord.gg/RDrkKNnYC3"
+orgEmail = "org@jpkreq.com"
 
 [markup]
 defaultMarkdownHandler = 'goldmark'
